# bookcase_backend

./: .env  Cargo.toml  README.md  bookcase.sql
src/: config.rs  main.rs
src/errors/: errors.rs
src/handlers/: book_handlers.rs  mod.rs
src/models/: books.rs
src/routes/: book_routes.rs
